# DistributedMandelbrot

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  jobspec.json  main.cpp  run-mpi.bat
common/: CMakeLists.txt  config.h  experimental_cxx_features.h  job.h  job_result.h  logging.h  vec.h
gui/: gui.py
kernel/: CMakeLists.txt  kernel.h
logs/cluster/: large.csv
mpi/: CMakeLists.txt  MESSAGE_TAGS.H  MPI_HELPERS.H  mpi_helpers.h
processor/: CMakeLists.txt  mpi_server.h  processor_base.h  worker_mt.h  worker_st.h
queue/: CMakeLists.txt  queue_base.h  queue_local.h  queue_mpi.h  result_collector.h
report/: erk.sty  report.tex
report/notebook/: notebook.ipynb
